--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,5 @@
-async-generator==1.10
-attrs==22.1.0
-beautifulsoup4==4.11.1
-certifi==2022.12.7
-cffi==1.15.1
-chardet==3.0.4
-charset-normalizer==2.1.1
-click==8.1.3
-colorama==0.4.6
-comtypes==1.1.14
-fake-agent==0.1.4
-fake-useragent==1.1.1
-googletrans==3.0.0
-h11==0.9.0
-h2==3.2.0
-hpack==3.0.0
-hstspreload==2022.12.1
-httpcore==0.9.1
-httpx==0.13.3
-hyperframe==5.2.0
-idna==2.10
-libretranslatepy==2.1.1
-lxml==4.9.2
-MouseInfo==0.1.3
-mss==7.0.1
-numpy==1.23.5
-opencv-contrib-python==4.7.0.68
-opencv-python==4.6.0.66
-outcome==1.2.0
-packaging==22.0
-Pillow==9.4.0
-PyAudio==0.2.12
-PyAutoGUI==0.9.53
-pycparser==2.21
-PyGetWindow==0.0.9
-PyJWT==2.6.0
-PyMsgBox==1.0.9
-pyperclip==1.8.2
-pypiwin32==223
-pypng==0.20220715.0
-PyRect==0.2.0
-PyScreeze==0.1.28
-PySocks==1.7.1
-pyTelegramBotAPI==4.8.0
-pytesseract==0.3.10
-python-dotenv==0.21.0
-pyttsx3==2.90
-pytweening==1.0.4
-pytz==2022.7
-pywin32==305
-qrcode==7.4.2
-requests==2.28.1
-rfc3986==1.5.0
-scapy==2.5.0
-selenium==4.7.2
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.3.2.post1
-SpeechRecognition==3.9.0
-tqdm==4.64.1
-translate==3.6.1
-translator==0.0.9
-trio==0.22.0
-trio-websocket==0.9.2
-twilio==7.16.0
-typing_extensions==4.4.0
-urllib3==1.26.13
-webdriver-manager==3.8.5
-wsproto==1.2.0
+telebot
+selenium
+webdriver_manager
+fake_useragent
+pyautogui
